Mon Apr 16 22:56:01 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/pty/expect_sample.rb: avoid symbolic link representation for
	  expect.  a patch from Kazuhiro NISHIYAMA <zn at mbf.nifty.com>.
	  [ruby-dev:30714]

Mon Apr 16 22:51:11 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* sample: replace TRUE, FALSE with true, false respectively.
	  a patch from Kazuhiro NISHIYAMA <zn at mbf.nifty.com>.
	  [ruby-dev:30713]

Mon Apr 16 17:08:02 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/optparse.rb (make_switch): do not clobber converter if pattern
	  has no convert method.  reported by sheepman in [ruby-dev:30709].

Mon Apr 16 16:49:32 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/stringio/stringio.c (strio_seek): consistent behavior with
	  IO#seek.  patch by sheepman in [ruby-dev:30710].

Mon Apr 16 16:34:08 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (parser_yylex): should set command_start after block
	  starting "do"s and braces.  [ruby-core:10916]

Sun Apr 15 09:19:57 2007  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/date/format.rb: added some zone names.

	* lib/date/format.rb (_parse): now interprets doted numerical
	  dates as a big endian (except dd.mm.yyyy).

Tue Apr 10 17:37:36 2007  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_fclose, rb_w32_close): need to save errno
	  before calling original fclose()/close().

Mon Apr  9 09:30:44 2007  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb (disconnect): call shutdown for
	  SSLSocket. Thanks, Technorama Ltd.

Thu Apr  5 00:42:48 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (rb_notimplement), io.c (pipe_open): removed definite
	  articles and UNIX manual section from messages.  [ruby-dev:30690]

Wed Apr  4 17:09:17 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (pipe_open): refined the message of NotImplementedError.
	  [ruby-dev:30685]

Wed Apr  4 10:18:04 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>
